<resources>

    // FormFragment
    <string name="app_name">first app</string>
    <string name="submit">Submit</string>
    <string name="form_title">Fill up the following details</string>
    <string name="user_name_hint">User name</string>
    <string name="email_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="validate_password_hint">Validate password</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="age">Age</string>
    <string name="team">Team</string>
    <string name="city">City</string>
    <string name="address">Address</string>

    <array name="addresses">
        <item name="address_1">הכנסת 1, חולון</item>
        <item name="address_2">צבי מנדלבלט 4, הרצליה</item>
        <item name="address_3">דרך המלך 78, גן חיים</item>
        <item name="address_4">יגאל ידין 14, חולון</item>
        <item name="address_5">שדרות יהודית 35, תל אביב</item>
    </array>

    <string name="user_name_category">User name: %s</string>
    <string name="email_category">Email: %s</string>
    <string name="password_category">Password: %s</string>
    <string name="gender_category">Gender: %s</string>
    <string name="city_category">City: %s</string>
    <string name="age_category">Age: %d</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="google_api_key">AIzaSyCWrtafL6TVZkghiqjhG_mAOKrH00Mmj8c</string>
    <string name="alphabet_letters">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
</resources>