<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/form_title"
        android:textSize="24sp" />

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/inputs_margin"
        android:hint="@string/user_name_hint"
        android:inputType="text" />

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/inputs_margin"
        android:autofillHints="@string/email_hint"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/inputs_margin"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/inputs_margin"
        android:hint="@string/validate_password_hint"
        android:inputType="textPassword" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/inputs_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/inputs_margin"
            android:text="@string/radio_male" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/inputs_margin"
            android:text="@string/radio_female" />

    </RadioGroup>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/cities" />
    
    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:inputType="number" 
        android:hint="@string/age"
        android:layout_margin="@dimen/inputs_margin"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/submit" />
    
</LinearLayout>